--- a/public/chatpof.html
+++ b/public/chatpof.html
@@ -11,7 +11,9 @@
   <body>
     <div id="box">
       <h2>Messages</h2>
-      <div id="messages"></div>
+      <div id="messages">
+        <ul id="message-list"></ul>
+      </div>
     </div>
   </body>
 </html>
