create the message list (1st attempt)

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <div id="chat-area">
         <div id="messages">
           <ul id="message-list">
-            <li v-for="m in message-list">{{ m.player.name }}: {{ m.message }}</li>
+            <li v-for="m in chatMessages">{{ m.player.name }}: {{ m.message }}</li>
           </ul>
         </div>
         <div id="input-area">
