fuse MessageList and InputArea into one responsive component

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div id="input-area">
-          <input type="text" id="input-message" v-on:change="send" v-model="message"></input><button v-on:click="send">{{ label }}</button>
+          <input type="text" id="input-message" v-on:change="send" v-model="inputMessage"></input><button v-on:click="send">{{ labelSend }}</button>
         </div>
         <div id="dice-area"></div>
       </div>
