Configure and show a sitename (#60)
* Set the sitename in configuration file

Add sitename to config/default.json
Make a hook to introduce configuration in the labels
Change the wod label (software name) for sitename

* eslint: remove extra ;

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 
     <script type="text/javascript" src="js/client.js"></script>
 
-    <title id="title">{{ roomName }} : {{ wod }}</title>
+    <title id="title">{{ roomName }} : {{ sitename }}</title>
   </head>
   <body>
-    <div id="main-menu-bar">{{ wod }} : {{ roomName }}</div>
+    <div id="main-menu-bar">{{ sitename }} : {{ roomName }}</div>
     <div id="main-app">
       <div id="lobby">
         {{ labelPlayerName }}<input type="text" id="playername" v-model="playerName"></input>
